--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,7 @@ on:
     inputs:
       version:
         description: 'The version of the release. Used as tag name.'
-        required: 'true'
+        required: true
         default: 'x.y.z'
 
 jobs:
