--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+      
+      - name: Execute build script
+        run: ./build.sh
 
       - name: changelog
         uses: scottbrenner/generate-changelog-action@master 
