--- a/src/main/resources/artifacts/applications/bonita-reporting-application.json
+++ b/src/main/resources/artifacts/applications/bonita-reporting-application.json
@@ -9,6 +9,10 @@
         {
             "version": "1.3.0",
             "bonitaMinVersion": "9.0.0"
+        },
+        {
+            "version": "2.0.0",
+            "bonitaMinVersion": "10.2.0"
         }
     ]
 }
